Update css and index.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <body>
         <nav>
             <header id="name">
-                <h1 style="color: #ffb8d9">Ivan Luu</h1>
+                <h1 style="color:hsl(196, 100%, 50%); font-size: 3pc;">Ivan Luu</h1>
             </header>
             <a href="index.html">About</a>
             <a href="https://github.com/ivluu">Github</a>
