--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
                 <ul>
                     <li>PC gaming</li>
                     <li>Cardistry</li>
+                    
+                        <div class="container">
+                            <div><img src="Images/hana.jpg" alt="Hana"></div>
+                            <div><img src="Images/sw.jpg" alt="starWars"></div>
+                            <div><img src="Images/views.jpg" alt="Views"></div>
+                        </div>
+                    
                     <li>Table Tennis</li>
                 </ul>
             </section>
@@ -67,7 +74,7 @@
                 <li>The Grand Budapest Hotel</li>
                 <li>Drive</li>
             </ol><br>
-            <video controls><source src="Media/bladeRunnerTrailer.mp4" type="video/mp4"></video><br><br>
+            <video controls><source src="Media/bladeRunnerTrailer.mp4" type="video/mp4" id="trailer"></video><br><br>
             <b>Programming Language:</b> <em>Java</em> because <code>malloc(), calloc(), free() and realloc()</code> have scarred me for life.<br><br>
             <b>Quote:</b> <p id="quote">"Straight roads are for fast cars, turns are for fast drivers." - Colin McRae</p>
         </div>
